--- a/php7-nginx-alpine/wordpress/Dockerfile
+++ b/php7-nginx-alpine/wordpress/Dockerfile
@@ -7,7 +7,7 @@ ENV TERM="xterm" \
     DB_USER=""\
     DB_PASS=""
 
-RUN cd / && curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && mv wp-cli.phar /usr/bin/wp-cli && chown nginx:nginx /usr/bin/wp-cli
+RUN cd / && curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && php wp-cli.phar --info && mv wp-cli.phar /usr/bin/wp-cli && chown nginx:nginx /usr/bin/wp-cli
 
 EXPOSE 80
 VOLUME ["/usr"]
