Update wordpress dockerfile

--- a/php7-nginx-alpine/vanilla/Dockerfile
+++ b/php7-nginx-alpine/vanilla/Dockerfile
@@ -7,7 +7,10 @@ ENV TERM="xterm" \
     DB_USER=""\
     DB_PASS=""
 
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && mv wp-cli.phar /usr/bin/wp-cli && chown nginx:nginx /usr/bin/wp-cli
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && php wp-cli.phar --info && mv wp-cli.phar /bin/wp-cli && chown nginx:nginx /bin/wp-cli
+
+ADD files/run-pre.sh /
+RUN chmod +x /run-pre.sh
 
 EXPOSE 80
 VOLUME ["/usr"]
