--- a/php7-nginx-alpine/vanilla/Dockerfile
+++ b/php7-nginx-alpine/vanilla/Dockerfile
@@ -4,10 +4,9 @@ LABEL maintainer "Andrew Li <andrew.li@hinterlands.tech>"
 ENV TERM="xterm" \
     DB_HOST="172.17.0.1" \
     DB_NAME="" \
-    DB_USER=""\
-    DB_PASS=""
-
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && php wp-cli.phar --info && mv wp-cli.phar /bin/wp-cli && chown nginx:nginx /bin/wp-cli
+    DB_USER="" \
+    DB_PASS="" \
+    VNL_VERSION=""
 
 ADD files/run-pre.sh /
 RUN chmod +x /run-pre.sh
