fix samples typo

--- a/php7-nginx-alpine/directus/samples/docker-compose.yml
+++ b/php7-nginx-alpine/directus/samples/docker-compose.yml
@@ -9,7 +9,7 @@ services:
      env_file:
        - env/mariadb.env
 
-   vanilla:
+   directus:
      depends_on:
        - db
      image: hinterlands/directus
