--- a/php7-nginx-alpine/directus/files/nginx.conf
+++ b/php7-nginx-alpine/directus/files/nginx.conf
@@ -118,7 +118,7 @@ http {
 
 	# Prevent PageSpeed module from rewriting the templates files
 	# Avoiding it from breaking the template
-	pagespeed Disallow */app/**/*.html;
+	# pagespeed Disallow */app/**/*.html;
 
   }
 
