update directus env

--- a/php7-nginx-alpine/directus/samples/env/directus.env
+++ b/php7-nginx-alpine/directus/samples/env/directus.env
@@ -2,3 +2,10 @@ DB_HOST=db
 DB_NAME=directusdb
 DB_USER=directus
 DB_PASS=directus
+MAIL_USER=noreply@hinterlands.tech
+MAIL_PASS=l71kzhoc
+MAIL_URL=mail.hinterlands.tech
+MAIL_PORT=587
+ADMIN_USER=admin@hinterlands.tech
+ADMIN_PASS=admin
+SITE_NAME=Hinterlands
