--- a/php7-nginx-alpine/directus/Dockerfile
+++ b/php7-nginx-alpine/directus/Dockerfile
@@ -11,7 +11,7 @@ ENV TERM="xterm" \
 RUN sed -i "$(( $( wc -l < /etc/nginx/mime.types) -10 ))i\ font/truetype                    ttf;" /etc/nginx/mime.types && \
     sed -i "$(( $( wc -l < /etc/nginx/mime.types) -10 ))i\ font/opentype                    otf;" /etc/nginx/mime.types
 
-ADD files/nginx.conf /etc/nginx/
+ADD files/default.conf /etc/nginx/conf.d/
 ADD files/run-pre.sh /
 RUN chmod +x /run-pre.sh
 
