--- a/php7-nginx-alpine/wordpress/Dockerfile
+++ b/php7-nginx-alpine/wordpress/Dockerfile
@@ -11,6 +11,7 @@ ENV TERM="xterm" \
 
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && chmod +x wp-cli.phar && php wp-cli.phar --info && mv wp-cli.phar /bin/wp-cli && chown nginx:nginx /bin/wp-cli
 
+ADD files/default.conf /etc/nginx/conf.d/
 ADD files/run-pre.sh /
 RUN chmod +x /run-pre.sh
 
