--- a/php7-nginx-alpine/Dockerfile
+++ b/php7-nginx-alpine/Dockerfile
@@ -25,6 +25,7 @@ RUN sed -i 's/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/g' /etc/php7/php.ini && \
     ln -s /sbin/php-fpm7 /sbin/php-fpm
 
 ADD files/nginx.conf /etc/nginx/
+ADD files/default.conf /etc/nginx/conf.d/
 ADD files/php-fpm.conf /etc/php7/
 ADD files/run.sh /
 RUN chmod +x /run.sh
