--- a/php7-nginx-alpine/wordpress/samples/docker-compose.yml
+++ b/php7-nginx-alpine/wordpress/samples/docker-compose.yml
@@ -22,6 +22,8 @@ services:
      restart: always
      env_file:
        - env/wordpress.env
+     environment:
+       - LOCAL_DEV=0
 
 volumes:
     app_data:
