--- a/php7-nginx-alpine/vanilla/samples/docker-compose.yml
+++ b/php7-nginx-alpine/vanilla/samples/docker-compose.yml
@@ -17,11 +17,14 @@ services:
        - "8000:80"
      volumes:
        - app_data:/usr/html
-       - ./src/plugins:/usr/html/plugins
-       - ./src/themes:/usr/html/themes
+       - ${PWD}/src/plugins:/usr/html/plugins
+       - ${PWD}/src/themes:/usr/html/themes
+       - ${PWD}/db:/db
      restart: always
      env_file:
        - env/vanilla.env
+     environment:
+       - LOCAL_DEV=0
 
 volumes:
     app_data:
