--- a/php7-nginx-alpine/payee/samples/docker-compose.yml
+++ b/php7-nginx-alpine/payee/samples/docker-compose.yml
@@ -12,7 +12,7 @@ services:
    payee:
      depends_on:
        - db
-     image: hinterlands/vanilla
+     image: hinterlands/payee
      ports:
        - "8000:80"
      volumes:
