--- a/php7-nginx-alpine/payee/files/default.conf
+++ b/php7-nginx-alpine/payee/files/default.conf
@@ -16,11 +16,11 @@ server {
     }
 
     location / {
-        try_files $uri $uri/ /index.php?p=$uri&$args;
-        #if (!-e $request_filename) {
-        #   rewrite  ^(.*)$  /index.php?s=$1  last;
-        #   break;
-        #}
+        #try_files $uri $uri/ /index.php?p=$uri&$args;
+        if (!-e $request_filename) {
+           rewrite  ^(.*)$  /index.php?s=$1  last;
+           break;
+        }
     }
 
     location ~* /(?:uploads|files)/.*\.php$ {
