add missing pkg

--- a/php7-nginx-alpine/payee/Dockerfile
+++ b/php7-nginx-alpine/payee/Dockerfile
@@ -8,6 +8,10 @@ ENV TERM="xterm" \
     DB_PASS="" \
     PAYEE_VERSION=""
 
+RUN apk update && \
+    apk add php7-simplexml && \
+    rm -rf /var/cache/apk/*
+
 ADD files/default.conf /etc/nginx/conf.d/
 ADD files/run-pre.sh /
 RUN chmod +x /run-pre.sh
