--- a/php5-nginx-alpine/files/default.conf
+++ b/php5-nginx-alpine/files/default.conf
@@ -1,4 +1,4 @@
-server {
+  server {
 
     listen       80;
 
@@ -10,54 +10,34 @@ server {
     disable_symlinks off;
 
     location = /robots.txt {
-        allow all;
-        log_not_found off;
-        access_log off;
+      allow all;
+      log_not_found off;
+      access_log off;
     }
 
     location / {
-        #try_files $uri $uri/ /index.php?p=$uri&$args;
-        if (!-e $request_filename) {
-           rewrite  ^(.*)$  /index.php?s=$1  last;
-           break;
-        }
+      try_files $uri $uri/ /index.php?$args;
     }
 
     location ~* /(?:uploads|files)/.*\.php$ {
-        deny all;
+    	deny all;
     }
 
-    location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml|bmp|swf)$ {
+    location ~* \.(jpg|jpeg|gif|png|css|js|ico|xml)$ {
         access_log        off;
         log_not_found     off;
         expires           360d;
     }
 
     location ~ [^/]\.php(/|$) {
-        fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-        if (!-f $document_root$fastcgi_script_name) {
-            return 404;
-        }
-        fastcgi_pass unix:/var/run/php7-fpm.sock;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
-    }
-
-    location ^~ /runtime {
-        deny all;
-    }
-
-    location ^~ /Runtime {
-        deny all;
-    }
-
-    location ^~ /cer {
-        deny all;
-    }
-
-    location ^~ /cert {
-        deny all;
+      fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+      if (!-f $document_root$fastcgi_script_name) {
+        return 404;
+      }
+      fastcgi_pass unix:/var/run/php5-fpm.sock;
+      fastcgi_index index.php;
+      fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+      include fastcgi_params;
     }
 
     ## Block SQL injections
@@ -79,4 +59,4 @@ server {
     location ~* [a-zA-Z0-9_]=(\.\.//?)+ { access_log /usr/logs/nginx/blocked.log blocked; deny all; }
     location ~* [a-zA-Z0-9_]=/([a-z0-9_.]//?)+ { access_log /usr/logs/nginx/blocked.log blocked; deny all; }
 
-}
+  }
