--- a/php7-nginx-alpine/osticket/samples/docker-compose.yml
+++ b/php7-nginx-alpine/osticket/samples/docker-compose.yml
@@ -12,7 +12,7 @@ services:
    vanilla:
      depends_on:
        - db
-     image: hinterlands/osticket
+     image: netcookies/osticket
      ports:
        - "8000:80"
      volumes:
