--- a/php7-nginx-alpine/osticket/samples/docker-compose.yml
+++ b/php7-nginx-alpine/osticket/samples/docker-compose.yml
@@ -9,7 +9,7 @@ services:
      env_file:
        - env/mariadb.env
 
-   vanilla:
+   osticket:
      depends_on:
        - db
      image: netcookies/osticket
